--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
 
 .top-container {
     background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/banner-bg.jpg");
+    width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
     background-color: #000000;
