--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 
 .top-container {
     display: block;
-    width: 100;
+    width: 100%;
     background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/banner-bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
