--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
     position: relative;
     z-index: 0;
     padding: 36px 245px 147px 245px;
-    margin: 0 auto 0 auto;
+    margin: 0;
 }
 
 .top-container::after {
