--- a/style.css
+++ b/style.css
@@ -25,8 +25,6 @@
 /* HEADER */
 
 .top-container {
-    display: block;
-    width: 100%;
     background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/banner-bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -35,7 +33,7 @@
     position: relative;
     z-index: 0;
     padding: 36px 245px 147px 245px;
-    margin: 0;
+    margin: 0 auto;
 }
 
 .top-container::after {
