--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@
     width: 100%;
     position: relative;
     z-index: 0;
-    /* padding: 36px 245px 147px 245px; */
     margin: 0 auto;
 }
 
@@ -51,7 +50,7 @@
 .header-container {
     display: flex;
     justify-content: center;
-    padding: 36px 254px;
+    padding-top: 36px;
 }
 
 .logo {
