--- a/style.css
+++ b/style.css
@@ -20,9 +20,15 @@
     height: 1px;
     clip: rect(1px, 1px, 1px, 1px);
     position: absolute;
-  } 
+}
 
 /* HEADER */
+
+.header {
+    width: 1200px;
+    margin: auto;
+    padding: 0 15px;
+}
 
 .top-container {
     background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/banner-bg.jpg");
@@ -30,10 +36,10 @@
     background-size: cover;
     background-color: #000000;
     background-position: center;
-    width: 100%;
     position: relative;
     z-index: 0;
     margin: 0 auto;
+    padding: 30px 0;
 }
 
 .top-container::after {
@@ -49,8 +55,8 @@
 
 .header-container {
     display: flex;
-    justify-content: center;
-    padding-top: 36px;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .logo {
@@ -74,21 +80,30 @@
     text-transform: uppercase;
 }
 
-ul li a {
-    text-decoration: none;
-    color: white;
+.navigation-list li:last-child {
+    margin-right: 0;
 }
 
-.banner {
+.navigation-list li a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.navigation-list li a:hover {
+    text-decoration: none;
+    color: #d3d3d3;
+}
+
+.navigation-list li a:active {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.banner-title {
     display: flex;
     justify-content: center;
     margin-top: 90px;
     padding-bottom: 147px;
-    /* Рассчитать точно! */
-
-}
-
-.banner-title {
     font-family: "OpenSans-Bold", sans-serif;
     font-size: 45px;
     line-height: 75px;
@@ -101,10 +116,6 @@ ul li a {
 
 .main a {
     text-decoration: none;
-    color: #000000;
-}
-
-.main a:visited {
     color: #000000;
 }
 
@@ -149,16 +160,7 @@ ul li a {
     margin-right: 20px;
 }
 
-.article-tag li a:link {
-    font-size: 14px;
-    font-family: "OpenSans-Bold", sans-serif;
-    margin-bottom: 15px;
-    text-transform: uppercase;
-    color: #b59f5b;
-    margin-right: 20px;
-}
-
-.article-tag li a:visited {
+.article-tag li a {
     font-size: 14px;
     font-family: "OpenSans-Bold", sans-serif;
     margin-bottom: 15px;
@@ -172,7 +174,7 @@ ul li a {
     font-family: "OpenSans-Bold", sans-serif;
     margin-bottom: 15px;
     text-transform: uppercase;
-    color: #b59f5b;
+    color: #d3d3d3;
     margin-right: 20px;
 }
 
@@ -181,16 +183,24 @@ ul li a {
     font-family: "OpenSans-Bold", sans-serif;
     margin-bottom: 15px;
     text-transform: uppercase;
-    color: #b59f5b;
+    color: #e8e8e8;
     margin-right: 20px;
 }
 
-h2 {
+.article-title {
     display: block;
     font-size: 20px;
     font-family: "OpenSans-Bold", sans-serif;
     line-height: 24px;
     text-transform: uppercase;
+}
+
+.article-title a:hover {
+    text-decoration: underline;
+}
+
+.article-title a:active {
+    text-decoration: none;
 }
 
 .article-data {
@@ -206,6 +216,18 @@ h2 {
     color: #989898;
 }
 
+.article-data a {
+    font-weight: 700;
+}
+
+.article-data a:hover {
+    color: #d3d3d3;
+}
+
+.article-data a:active {
+    color: #e8e8e8;
+}
+
 .article-description p {
     font-size: 15px;
     line-height: 22px;
@@ -213,15 +235,6 @@ h2 {
 }
 
 /* ASIDE */
-
-.section a {
-    text-decoration: none;
-    color: #000000;
-}
-
-.section a:visited {
-    color: #000000;
-}
 
 .aside-container {
     position: relative;
@@ -237,7 +250,6 @@ h2 {
     text-align: center;
 }
 
-
 .section-title::after {
     content: "";
     display: block;
@@ -246,9 +258,9 @@ h2 {
     background-color: #e1d9bd;
     margin: 10px auto 23px auto;
     /* position: relative; 
-    left: 50%;
-    transform: translateX(-50%); */
-} 
+      left: 50%;
+      transform: translateX(-50%); */
+}
 
 .item-group {
     margin-top: 5px;
@@ -263,7 +275,6 @@ h2 {
 
 .item-content {
     padding-left: 20px;
-
 }
 
 .item-date {
@@ -276,6 +287,21 @@ h2 {
     font-family: "OpenSans-Bold", sans-serif;
     font-size: 14px;
     text-transform: uppercase;
+}
+
+.item-title a {
+    text-decoration: none;
+    color: #000000;
+}
+
+.item-title a:hover {
+    text-decoration: none;
+    color: #000000;
+    text-decoration: underline;
+}
+
+.item-title a:active {
+    text-decoration: none;
 }
 
 .form-group {
@@ -311,7 +337,7 @@ h2 {
     border: none;
 }
 
-.primary-button:active {
+.primary-button:hover {
     position: absolute;
     box-sizing: border-box;
     width: 46px;
@@ -321,6 +347,21 @@ h2 {
     background-image: url(https://netology-code.github.io/html-2-diploma/sources/images/search.svg);
     background-size: 18px;
     background-color: lightgrey;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none;
+}
+
+.primary-button:active {
+    position: absolute;
+    box-sizing: border-box;
+    width: 46px;
+    height: 48px;
+    top: 0;
+    right: 0;
+    background-image: url(https://netology-code.github.io/html-2-diploma/sources/images/search.svg);
+    background-size: 18px;
+    background-color: rgb(232, 232, 232);
     background-repeat: no-repeat;
     background-position: center;
     border: none;
@@ -351,7 +392,23 @@ h2 {
     background-color: #b59f5b;
     border: none;
     font-family: "OpenSans-Bold", sans-serif;
-    color: #FFFFFF;
+    color: #ffffff;
+    text-transform: uppercase;
+}
+
+
+.secondary-button:hover {
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    height: 48px;
+    margin-bottom: 60px;
+    top: 0;
+    right: 0;
+    background-color: #d3d3d3;
+    border: none;
+    font-family: "OpenSans-Bold", sans-serif;
+    color: #ffffff;
     text-transform: uppercase;
 }
 
@@ -363,32 +420,46 @@ h2 {
     margin-bottom: 60px;
     top: 0;
     right: 0;
-    background-color: lightgrey;
+    background-color: #e8e8e8;
     border: none;
     font-family: "OpenSans-Bold", sans-serif;
-    color: #FFFFFF;
+    color: #ffffff;
     text-transform: uppercase;
 }
 
 .tag-list {
     display: flex;
-    list-style: none;
+    list-style-type: none;
     flex-wrap: wrap;
     margin-bottom: 60px;
 }
 
-.tag-list li {
+.tag-list li a {
+    display: block;
     border: 3px solid #eeeeee;
     padding: 8px 13px;
+    margin: 0 6px 6px 0;
     font-family: "OpenSans-Bold", sans-serif;
     font-size: 12px;
     text-transform: uppercase;
-    margin-right: 5px;
-    margin-bottom: 6px;
+    text-decoration: none;
+    color: #000000;
 }
 
-.theme-list {
-    list-style: none;
+.tag-list li a:hover {
+    text-decoration: none;
+    border: 3px solid #000000;
+    color: #000000;
+}
+
+.tag-list li a:active {
+    text-decoration: none;
+    border: 3px solid #eeeeee;
+    color: #000000;
+}
+
+.theme-list li {
+    list-style-type: none;
     font-family: "OpenSans-Bold", sans-serif;
 }
 
@@ -401,7 +472,22 @@ h2 {
     margin-bottom: 6px;
 }
 
-.theme-container ul li:nth-child(n+2) {
+.theme-list li a {
+    text-decoration: none;
+    color: #000000;
+}
+
+.theme-list li a:hover {
+    text-decoration: none;
+    color: #d3d3d3;
+}
+
+.theme-list li a:active {
+    text-decoration: none;
+    color: #000000;
+}
+
+.theme-container ul li:nth-child(n + 2) {
     padding-top: 21px;
 }
 
@@ -412,10 +498,18 @@ h2 {
     font-size: 86%;
 }
 
+.article-count:hover {
+    color: #d3d3d3;
+}
+
+.article-count:active {
+    color: #b59f5b;;
+}
+
 /* FOOTER */
 
 .socials {
-    width: 100%;    
+    width: 100%;
     height: 83px;
     background-color: #f4f7f6;
     margin: 4px auto 76px auto;
@@ -482,6 +576,18 @@ h2 {
     background-repeat: no-repeat;
 }
 
+.social-media li a:hover {
+    position: absolute;
+    height: 23px;
+    width: 23px;
+}
+
+.social-media li a:active {
+    position: absolute;
+    height: 20px;
+    width: 20px;
+}
+
 /* COPYRIGHT */
 
 .copyright {
@@ -500,7 +606,12 @@ h2 {
     color: #999999;
 }
 
-.copyright a:visited {
+.copyright a:hover {
+    text-decoration: underline;
+    color: #999999;
+}
+
+.copyright a:active {
     text-decoration: none;
     color: #999999;
 }
