--- a/style.css
+++ b/style.css
@@ -448,7 +448,7 @@
 
 .tag-list li a:hover {
     text-decoration: none;
-    border: 3px solid #000000;
+    border: 3px solid #e1d9bd;
     color: #000000;
 }
 
