--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@
     src: url("https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Bold.woff") format("woff");
 }
 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 .visually-hidden {
     width: 1px;
     height: 1px;
@@ -102,8 +108,8 @@
 .banner-title {
     display: flex;
     justify-content: center;
-    margin-top: 90px;
-    padding-bottom: 147px;
+    margin-top: 85px;
+    padding-bottom: 107px;
     font-family: "OpenSans-Bold", sans-serif;
     font-size: 45px;
     line-height: 75px;
@@ -114,17 +120,25 @@
 
 /* MAIN */
 
+.main {
+    width: 780px;
+}
+
 .main a {
     text-decoration: none;
     color: #000000;
 }
 
 .mid-container {
+    margin-top: 64px;
+}
+
+.mid-container-wrapper {
+    width: 1280px;
+    margin: auto;
+    padding: 0 15px;
     display: flex;
-    justify-content: left;
-    box-sizing: border-box;
-    width: 1170px;
-    margin: 64px auto 0 auto;
+    justify-content: space-between;
 }
 
 .article {
@@ -234,13 +248,14 @@
     margin-bottom: 10px;
 }
 
+.last-article {
+    margin-bottom: 0;
+}
+
 /* ASIDE */
 
 .aside-container {
-    position: relative;
     width: 269px;
-    left: 122px;
-    margin-bottom: 1060px;
 }
 
 .section-title {
@@ -448,7 +463,7 @@
 
 .tag-list li a:hover {
     text-decoration: none;
-    border: 3px solid #e1d9bd;
+    border: 3px solid #e1d9bd;;
     color: #000000;
 }
 
@@ -513,73 +528,68 @@
 }
 
 .footer {
-    display: block;
-    text-align: center;
-    width: 1170px;
+    margin-top: 60px;
+}
+
+.footer-wrapper {
+    width: 1280px;
     margin: auto;
+    padding: 0 15px;
 }
 
 /* SOCIAL MEDIA */
 
-.social-media {
+.social-media-list {
     display: flex;
     justify-content: center;
 }
 
-.social-media li {
+.social-media-list li {
     list-style-type: none;
 }
 
-.social-media li a {
+.social-media-icon {
     display: block;
     width: 20px;
     height: 20px;
     margin-top: 30px;
     margin-right: 35px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .twitter-icon {
     background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/social/004-twitter.svg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+
 }
 
 .pininterest-icon {
     background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/social/001-pinterest.svg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+
 }
 
 .facebook-icon {
     background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/social/002-facebook-logo.svg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+
 }
 
 .instagram-icon {
     background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/social/005-instagram.svg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+
 }
 
 .tumblr-icon {
     background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/social/003-tumblr.svg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
 }
 
-.social-media li a:hover {
+.social-media-icon:hover {
     position: absolute;
     height: 23px;
     width: 23px;
 }
 
-.social-media li a:active {
+.social-media-icon:active {
     position: absolute;
     height: 20px;
     width: 20px;
@@ -590,6 +600,7 @@
 .copyright {
     width: 100%;
     margin-bottom: 44px;
+    text-align: center;
 }
 
 .copyright p {
